# speed_optimizer_knitro

./: CMakeLists.txt  README.md  position_result.csv  timed_result.csv
data/: saved_waypoints.csv
include/: KTRIProblem.h  KTRMSProcessCallback.h  KTRMipNodeCallback.h  KTRMsInitptCallback.h  KTRNewptCallback.h  KTRProblem.h  KTRProblemLSQ.h
include/ReferencePath/: ReferencePath.h  cubic_spline.h
include/Waypoint/: Waypoints.h
include/impl/: KTRConstraints.hxx  KTRElements.hxx  KTRISolver.hxx  KTRProblem.hxx  KTRProblemLSQ.hxx  KTRSolver.hxx  KTRSolverLSQ.hxx
script/: visualize.py  visualize_s_t_graph.py
src/: ExPositionOptimizer.cpp  ExPositionOptimizer.h  ExSpeedOptimizer.cpp  ExSpeedOptimizer.h  ExTimeOptimizer.cpp  ExTimeOptimizer.h  Waypoints.h  visualize.py
src/Waypoint/: Waypoints.cpp
